--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ SMTP_PORT= 465
 SMTP_USER= "setulalchowhan@gmail.com"
 SMTP_PASS= "qmdhixwhmxquoiwm"
 NODE_ENV= development
+OPEN_API_KEY= "AIzaSyCNOtCWfq5fkejSNJZ5maWxu78-NdD9Dqk"
+OPENAI_BASE_URL= "https://generativelanguage.googleapis.com/v1beta/openai/"
+OPENAI_MODEL= "gemini-2.5-flash"
