--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.10",
+    "openai": "^6.15.0",
     "slugify": "^1.6.6"
   }
 }
